# depbotsample

./: .gitignore
.github/: dependabot.yml
project1/: README.md  pyproject.toml
project1/src/project1/: _version.py
project2/: README.md  pyproject.toml
project2/src/project2/: __init__.py
