[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "project1"
dynamic = ["version"]
description = "A sample project using hatch-vcs for versioning"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.hatch.version]
source = "vcs"
raw-options = { root = ".." }

[tool.hatch.build.hooks.vcs]
version-file = "src/project1/_version.py"
