[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "project2"
module-root = ""

[project]
name = "project2"
version = "0.1.0"
description = "A sample project using uv with path dependency"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "project1",
]

[tool.uv.sources]
project1 = { path = "../project1", editable = true }
